FIDOCONFIG 0.14 stable

1. MAJOR feature improvements:
- log maintnance functions included
- temp files maintnance functions included

2. CONFIG changes:

- if conditions must be quoted like this:

  if "[OS]"=="UNIX"
  endif

3. IMPORTANT bugfixes: